--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,199 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+html {
+  box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
 body {
-  background-color: #ffffff;
+  background-color: lightpink;
+  padding: 0;
+  margin: 36px 20px 40px;
 }
 
 h1 {
   color: #f03000;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+nav {
+  text-align: center;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+  color: #000000;
+  margin: 0;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+section {
+  margin-top: 40px;
+}
+
+.nav__button {
+  color: #f03000;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 20px;
+  border: 0;
+  background-color: transparent;
+}
+
+.nav__button--primary {
+  background-color: #f03000;
+  color: #ffffff;
+}
+
+.offerList {
+  display: grid;
+  gap: 20px;
+}
+
+.offer {
+  background-color: green;
+  position: relative;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.offer--bigger {
+  background-color: palegreen;
+  height: 240px;
+}
+
+.offer--lastMinute {
+  background-color: palevioletred;
+  height: 240px;
+}
+
+.offer__img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.offer__price {
+  background-color: #f03000;
+  padding: 10px;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  position: relative;
+}
+
+.offer__text {
+  position: relative;
+  color: #ffffff;
+}
+
+.offer__title {
+  position: relative;
+  margin: 0;
+}
+
+.offer__description {
+  font-family: "Open Sans", sans-serif;
+  position: relative;
+  margin: 18px 0 0;
+}
+
+.benefits {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.benefit {
+  background-color: #f0f0f0;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr;
+}
+
+.benefit__icon {
+  margin: 20px auto;
+}
+
+.benefit__title {
+  color: #f03000;
+  font-size: 18px;
+}
+
+.benefit__text {
+  padding-right: 20px;
+}
+
+.benefit__description {
+  font-size: 16px;
+}
+
+.news {
+  display: grid;
+  gap: 20px;
+}
+
+/* -- NEWS -- */
+.new {
+  background-color: #f0f0f0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding-top: 20px;
+  font-weight: 600;
+}
+
+.new__date {
+  color: #888888;
+  margin: 20px 20px 10px;
+}
+
+.new__title {
+  color: #f03000;
+  margin: 10px 20px;
+}
+
+.new__text {
+  color: #000000;
+  margin: 10px 20px 20px;
+}
+
+footer {
+  background-color: #444444;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.footer__text {
+  margin: 0;
 }/*# sourceMappingURL=style.css.map */
