--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,208 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+html {
+  box-sizing: border-box;
+}
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
 $color-accent: #f03000;
 $color-white: #ffffff;
 $color-whiteGrey: #f0f0f0;
-$color-lightGrey: #808080;
+$color-transparentGrey: #80808080;
 $color-grey: #888888;
 $color-darkGrey: #444444;
 $color-black: #000000;
 
+$font-montserrat: 'Montserrat', sans-serif;
+$font-openSans: 'Open Sans', sans-serif;
+
 body {
-  background-color: $color-white;
+  background-color: lightpink;
+  padding: 0;
+  margin: 36px 20px 40px;
 }
 
 h1 {
   color: $color-accent;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+nav {
+  text-align: center;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+h1,
+h2,
+h3 {
+  font-family: $font-montserrat;
+}
+
+h2 {
+  color: $color-black;
+  margin: 0;
+}
+
+p {
+  font-family: $font-openSans;
+}
+
+section {
+  margin-top: 40px;
+}
+
+.nav__button {
+  color: $color-accent;
+  font-family: $font-montserrat;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 20px;
+  border: 0;
+  background-color: transparent;
+}
+.nav__button--primary {
+  background-color: $color-accent;
+  color: $color-white;
+}
+
+.offerList {
+  display: grid;
+  gap: 20px;
+}
+
+.offer {
+  background-color: green;
+  position: relative;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.offer--bigger {
+  background-color: palegreen;
+  height: 240px;
+}
+
+.offer--lastMinute {
+  background-color: palevioletred;
+  height: 240px;
+}
+
+.offer__img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.offer__price {
+  background-color: $color-accent;
+  padding: 10px;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  color: $color-white;
+  position: relative;
+}
+
+.offer__text {
+  position: relative;
+  color: $color-white;
+}
+
+.offer__title {
+  position: relative;
+  margin: 0;
+}
+
+.offer__description {
+  font-family: $font-openSans;
+  position: relative;
+  margin: 18px 0 0;
+}
+
+.benefits {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.benefit {
+  background-color: $color-whiteGrey;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr;
+}
+
+.benefit__icon {
+  margin: 20px auto;
+}
+
+.benefit__title {
+  color: $color-accent;
+  font-size: 18px;
+}
+
+.benefit__text {
+  padding-right: 20px;
+}
+
+.benefit__description {
+  font-size: 16px;
+}
+
+.news {
+  display: grid;
+  gap: 20px;
+}
+
+/* -- NEWS -- */
+.new {
+  background-color: $color-whiteGrey;
+  font-family: $font-montserrat;
+  font-size: 16px;
+  padding-top: 20px;
+  font-weight: 600;
+}
+
+.new__date {
+  color: $color-grey;
+  margin: 20px 20px 10px;
+}
+
+.new__title {
+  color: $color-accent;
+  margin: 10px 20px;
+}
+
+.new__text {
+  color: #000000;
+  margin: 10px 20px 20px;
+}
+
+footer {
+  background-color: $color-darkGrey;
+  color: $color-white;
+  font-family: $font-montserrat;
+  font-size: 16px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.footer__text {
+  margin: 0;
 }
