--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,13 @@ section {
 
 .offerList {
   display: grid;
+  grid-template-rows: 240px 150px 150px;
   gap: 20px;
 }
 
 .offer {
   background-color: green;
   position: relative;
-  height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -79,18 +79,7 @@ section {
   padding: 20px;
 }
 
-.offer--bigger {
-  background-color: palegreen;
-  height: 240px;
-}
-
-.offer--lastMinute {
-  background-color: palevioletred;
-  height: 240px;
-}
-
 .offer__img {
-  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -196,4 +185,65 @@ footer {
 
 .footer__text {
   margin: 0;
+}
+
+@media screen and (min-width: 500px) {
+  body {
+    background-color: lightcyan;
+    margin-top: 40px;
+  }
+  h1 {
+    margin: 0;
+  }
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav {
+    margin: 0;
+  }
+  .offerList {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 380px 180px;
+    gap: 20px;
+  }
+  .offerList__title {
+    padding-bottom: 20px;
+  }
+  .offer--bigger {
+    grid-column: 1/-1;
+    height: 100%;
+  }
+  .offer--lastMinute {
+    background-color: blue;
+    grid-column: 1/-1;
+  }
+  .benefits {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+  }
+  .benefit {
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .benefit__icon {
+    margin: 20px auto;
+  }
+  .benefit__title {
+    color: #f03000;
+    font-size: 18px;
+    margin-top: 0;
+  }
+  .benefit__text {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
