--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,12 @@ html {
   box-sizing: inherit;
 }
 
+/* -- BASE -- */
 body {
-  background-color: lightpink;
   padding: 0;
   margin: 36px 20px 40px;
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
@@ -20,13 +22,6 @@ h1 {
   text-align: center;
   font-size: 30px;
   font-weight: 800;
-}
-
-nav {
-  text-align: center;
-  margin: 30px 0;
-  display: flex;
-  justify-content: space-between;
 }
 
 h1,
@@ -48,6 +43,18 @@ section {
   margin-top: 40px;
 }
 
+.container {
+  max-width: 1200px;
+}
+
+/* -- HEADER -- */
+.nav {
+  text-align: center;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
 .nav__button {
   color: #f03000;
   font-family: "Montserrat", sans-serif;
@@ -63,14 +70,18 @@ section {
   color: #ffffff;
 }
 
+/* -- OFFERS -- */
 .offerList {
   display: grid;
   grid-template-rows: 240px 150px 150px;
   gap: 20px;
 }
 
+.offerList__title {
+  margin-bottom: 20px;
+}
+
 .offer {
-  background-color: green;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -114,6 +125,7 @@ section {
   margin: 18px 0 0;
 }
 
+/* -- BENEFITS -- */
 .benefits {
   display: flex;
   flex-direction: column;
@@ -144,12 +156,13 @@ section {
   font-size: 16px;
 }
 
+/* -- NEWS -- */
 .news {
   display: grid;
+  grid-template-columns: 1fr;
   gap: 20px;
 }
 
-/* -- NEWS -- */
 .new {
   background-color: #f0f0f0;
   font-family: "Montserrat", sans-serif;
@@ -159,7 +172,6 @@ section {
 }
 
 .new__date {
-  color: #888888;
   margin: 20px 20px 10px;
 }
 
@@ -173,6 +185,7 @@ section {
   margin: 10px 20px 20px;
 }
 
+/* -- FOOTER -- */
 footer {
   background-color: #444444;
   color: #ffffff;
@@ -187,9 +200,8 @@ footer {
   margin: 0;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
   body {
-    background-color: lightcyan;
     margin-top: 40px;
   }
   h1 {
@@ -210,15 +222,11 @@ footer {
     grid-template-rows: 380px 180px;
     gap: 20px;
   }
-  .offerList__title {
-    padding-bottom: 20px;
-  }
   .offer--bigger {
     grid-column: 1/-1;
     height: 100%;
   }
   .offer--lastMinute {
-    background-color: blue;
     grid-column: 1/-1;
   }
   .benefits {
@@ -245,5 +253,53 @@ footer {
   .benefit__text {
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+@media screen and (min-width: 960px) {
+  .offerList {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 180px 180px;
+  }
+  .offer--bigger {
+    grid-column: 1/span 2;
+    grid-row: 1/span 2;
+  }
+  .offer--lastMinute {
+    grid-column: 2/span 2;
+    grid-row: 1/span 2;
+  }
+  .benefits {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px;
+  }
+  .benefit {
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .benefit__icon {
+    margin: 20px auto;
+  }
+  .benefit__title {
+    color: #f03000;
+    font-size: 18px;
+    margin-top: 0;
+  }
+  .benefit__text {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .news {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1auto 1fr;
+    gap: 20px;
+  }
+  .news__title {
+    grid-column: 3 span;
   }
 }/*# sourceMappingURL=style.css.map */
