--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html {
 
 /* -- BASE -- */
 body {
-  padding: 0;
   margin: 36px 20px 40px;
   display: flex;
   justify-content: center;
@@ -22,6 +21,7 @@ h1 {
   text-align: center;
   font-size: 30px;
   font-weight: 800;
+  margin: 0;
 }
 
 h1,
@@ -81,8 +81,13 @@ section {
   margin-bottom: 20px;
 }
 
-.offer {
+.offer,
+.offer__price,
+.offer__text {
   position: relative;
+}
+
+.offer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -103,32 +108,27 @@ section {
 .offer__price {
   background-color: #f03000;
   padding: 10px;
-  font-size: 18px;
   font-family: "Montserrat", sans-serif;
   color: #ffffff;
-  position: relative;
+  font-size: 18px;
 }
 
 .offer__text {
-  position: relative;
   color: #ffffff;
 }
 
 .offer__title {
-  position: relative;
   margin: 0;
 }
 
 .offer__description {
   font-family: "Open Sans", sans-serif;
-  position: relative;
   margin: 18px 0 0;
 }
 
 /* -- BENEFITS -- */
 .benefits {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 10px;
 }
 
@@ -204,9 +204,6 @@ footer {
   body {
     margin-top: 40px;
   }
-  h1 {
-    margin: 0;
-  }
   header {
     display: flex;
     flex-direction: row;
@@ -217,42 +214,30 @@ footer {
     margin: 0;
   }
   .offerList {
-    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 380px 180px;
     gap: 20px;
   }
-  .offer--bigger {
-    grid-column: 1/-1;
-    height: 100%;
-  }
+  .offer--bigger,
   .offer--lastMinute {
     grid-column: 1/-1;
   }
   .benefits {
-    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
   }
   .benefit {
-    background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
-  .benefit__icon {
-    margin: 20px auto;
-  }
   .benefit__title {
-    color: #f03000;
-    font-size: 18px;
     margin-top: 0;
   }
   .benefit__text {
     padding-left: 20px;
-    padding-right: 20px;
   }
 }
 @media screen and (min-width: 960px) {
@@ -269,37 +254,14 @@ footer {
     grid-row: 1/span 2;
   }
   .benefits {
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    gap: 20px;
-  }
-  .benefit {
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  .benefit__icon {
-    margin: 20px auto;
-  }
-  .benefit__title {
-    color: #f03000;
-    font-size: 18px;
-    margin-top: 0;
-  }
-  .benefit__text {
-    padding-left: 20px;
-    padding-right: 20px;
   }
   .news {
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1auto 1fr;
-    gap: 20px;
+    grid-template-rows: auto 1fr;
   }
   .news__title {
-    grid-column: 3 span;
+    grid-column: span 3;
   }
 }/*# sourceMappingURL=style.css.map */
