--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ section {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 20px;
 }
 
 .offer__img {
@@ -111,10 +110,14 @@ section {
   font-family: "Montserrat", sans-serif;
   color: #ffffff;
   font-size: 18px;
+  margin: 20px;
 }
 
 .offer__text {
   color: #ffffff;
+  width: 100%;
+  padding: 50px 20px 20px;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
 
 .offer__title {
