--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,7 +102,6 @@ section {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 20px;
 }
 
 .offer__img {
@@ -120,10 +119,18 @@ section {
   font-family: $font-montserrat;
   color: $color-white;
   font-size: 18px;
+  margin: 20px;
 }
 
 .offer__text {
   color: $color-white;
+  width: 100%;
+  padding: 50px 20px 20px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.5)
+  );
 }
 
 .offer__title {
