--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,6 +102,7 @@ section {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .offer__img {
@@ -111,6 +112,12 @@ section {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+
+.offer__img:hover {
+  transform: scale(1.05);
 }
 
 .offer__price {
@@ -125,7 +132,7 @@ section {
 .offer__text {
   color: $color-white;
   width: 100%;
-  padding: 50px 20px 20px;
+  padding: 20px;
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0),
