--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,10 @@ section {
   padding: 20px;
   border: 0;
   background-color: transparent;
+  text-decoration: none;
 }
 
-.nav__button--primary {
+.nav__button:hover {
   background-color: #f03000;
   color: #ffffff;
 }
