--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ $color-transparentGrey: #80808080;
 $color-grey: #888888;
 $color-darkGrey: #444444;
 $color-black: #000000;
+$color-grey--background: #e5e5e5;
 
 $font-montserrat: 'Montserrat', sans-serif;
 $font-openSans: 'Open Sans', sans-serif;
@@ -104,6 +105,7 @@ section {
   justify-content: space-between;
   align-items: flex-start;
   overflow: hidden;
+  text-decoration: none;
 }
 
 .offer__img {
@@ -148,6 +150,11 @@ section {
 .offer__description {
   font-family: $font-openSans;
   margin: 18px 0 0;
+}
+
+.detailInfoList {
+  display: grid;
+  gap: 20px;
 }
 
 /* -- BENEFITS -- */
@@ -224,6 +231,59 @@ footer {
   margin: 0;
 }
 
+/* -- OFFER DETAIL CSS -- */
+
+.offer-titleImg {
+  min-height: 240px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.detailInfo {
+  background-color: $color-grey--background;
+  padding: 20px;
+}
+
+.detailInfo__title {
+  color: $color-grey;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding-bottom: 6px;
+  margin: 0;
+}
+
+.detailInfo__description {
+  font-size: 16px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.detailInfo--important {
+  background-color: $color-accent;
+  color: $color-white;
+}
+
+.detailInfo--important .detailInfo__description {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.detailInfo--important .detailInfo__text {
+  opacity: 70%;
+}
+
+.galery {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.galery img {
+  width: 100%;
+}
+
 @media screen and (min-width: 768px) {
   body {
     margin-top: 40px;
@@ -271,6 +331,8 @@ footer {
   .benefit__text {
     padding-left: 20px;
   }
+
+  /* -- OFFER DETAIL CSS -- */
 }
 
 @media screen and (min-width: 960px) {
