--- a/scss/style.scss
+++ b/scss/style.scss
@@ -275,13 +275,13 @@ footer {
   opacity: 70%;
 }
 
-.galery {
+.gallery {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
 
-.galery img {
+.gallery img {
   width: 100%;
 }
 
@@ -337,6 +337,7 @@ footer {
   .offer-titleImg {
     min-height: 380px;
   }
+
   .detail_title {
     font-size: 48px;
   }
@@ -351,7 +352,7 @@ footer {
     grid-template-columns: 1fr 1fr;
   }
 
-  .galery {
+  .gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
@@ -387,5 +388,25 @@ footer {
 
   .news__title {
     grid-column: span 3;
+  }
+
+  /* -- OFFER DETAIL CSS -- */
+  .main__detail {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .offer-titleImg {
+    min-height: 462px;
+  }
+
+  .detailInfoList {
+    grid-column: 2;
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-column: 1;
   }
 }
