--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
-html {
-  box-sizing: border-box;
-}
-
-*,
-::before,
-::after {
-  box-sizing: inherit;
-}
-
-/* -- BASE -- */
-body {
-  margin: 36px 20px 40px;
-  display: flex;
-  justify-content: center;
-}
-
-h1 {
-  color: #f03000;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 800;
-  margin: 0;
-  text-transform: uppercase;
-}
-
-h1,
-h2,
-h3 {
-  font-family: "Montserrat", sans-serif;
-}
-
-h2 {
-  color: #000000;
-  margin: 0;
-}
-
-p {
-  font-family: "Open Sans", sans-serif;
-}
-
-section {
-  margin-top: 40px;
-}
-
-.container {
-  max-width: 1200px;
-}
-
 /* -- HEADER -- */
 .nav {
   text-align: center;
@@ -70,6 +21,32 @@ section {
 .nav__button:hover {
   background-color: #f03000;
   color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav {
+    margin: 0;
+  }
+}
+/* -- FOOTER -- */
+footer {
+  background-color: #444444;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.footer__text {
+  margin: 0;
 }
 
 /* -- OFFERS -- */
@@ -139,11 +116,31 @@ section {
   margin: 18px 0 0;
 }
 
-.detailInfoList {
-  display: grid;
-  gap: 20px;
+@media screen and (min-width: 768px) {
+  .offerList {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 380px 180px;
+    gap: 20px;
+  }
+  .offer--bigger,
+  .offer--lastMinute {
+    grid-column: 1/-1;
+  }
 }
-
+@media screen and (min-width: 960px) {
+  .offerList {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 180px 180px;
+  }
+  .offer--bigger {
+    grid-column: 1/span 2;
+    grid-row: 1/span 2;
+  }
+  .offer--lastMinute {
+    grid-column: 2/span 2;
+    grid-row: 1/span 2;
+  }
+}
 /* -- BENEFITS -- */
 .benefits {
   display: grid;
@@ -174,6 +171,31 @@ section {
   font-size: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .benefits {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+  }
+  .benefit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .benefit__title {
+    margin-top: 0;
+  }
+  .benefit__text {
+    padding-left: 20px;
+  }
+}
+@media screen and (min-width: 960px) {
+  .benefits {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+}
 /* -- NEWS -- */
 .news {
   display: grid;
@@ -203,34 +225,94 @@ section {
   margin: 10px 20px 20px;
 }
 
-/* -- FOOTER -- */
-footer {
-  background-color: #444444;
-  color: #ffffff;
-  font-family: "Montserrat", sans-serif;
-  font-size: 16px;
-  padding: 20px;
-  text-align: center;
-  margin-top: 40px;
+@media screen and (min-width: 960px) {
+  .news {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
+  }
+  .news__title {
+    grid-column: span 3;
+  }
+}
+/* -- INTRO -- */
+.tripDetail__intro {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  min-height: 240px;
 }
 
-.footer__text {
+.intro__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+
+.intro__img:hover {
+  transform: scale(1.05);
+}
+
+.intro__text {
+  position: relative;
+  padding: 20px;
+  color: #ffffff;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
+}
+
+.intro__title {
+  font-size: 28px;
   margin: 0;
 }
 
-/* -- OFFER DETAIL CSS -- */
-.offer-titleImg {
-  min-height: 240px;
-  display: flex;
-  justify-content: flex-end;
+.intro__description {
+  font-size: 16px;
+  margin: 15px 0 0;
 }
 
-.detailInfo {
+@media screen and (min-width: 768px) {
+  .tripDetail__intro {
+    min-height: 380px;
+  }
+  .intro__title {
+    font-size: 48px;
+  }
+  .intro__description {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  .intro_description {
+    font-size: 20px;
+  }
+}
+/* --- DESCRIPTION ---*/
+.description {
+  margin-top: 0;
+}
+
+.description__title {
+  margin: 25px 0;
+}
+
+/* --- INFO --- */
+.tripDetail__info {
+  display: grid;
+  gap: 20px;
+}
+
+.info {
   background-color: #e5e5e5;
   padding: 20px;
 }
 
-.detailInfo__title {
+.info__title {
   color: #888888;
   font-weight: 300;
   font-size: 14px;
@@ -239,91 +321,63 @@ footer {
   margin: 0;
 }
 
-.detailInfo__description {
+.info__description {
   font-size: 16px;
   margin: 0;
   display: flex;
   flex-direction: column;
 }
 
-.detailInfo--important {
+.info--important {
   background-color: #f03000;
   color: #ffffff;
 }
 
-.detailInfo--important .detailInfo__description {
+.info--important .info__description {
   font-size: 28px;
   font-weight: 600;
 }
 
-.detailInfo--important .detailInfo__text {
+.info--important .info__title {
   opacity: 70%;
+  color: #f0f0f0;
 }
 
+@media screen and (min-width: 768px) {
+  .tripDetail__info {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 960px) {
+  .tripDetail__info {
+    grid-column: 2;
+    grid-template-columns: 1fr;
+  }
+}
+/* --- DESCRIPTION ---*/
+.description {
+  margin-top: 0;
+}
+
+.description__title {
+  margin: 25px 0;
+}
+
+/* --- GALLERY --- */
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
 
-.gallery img {
+.gallery__photo {
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  body {
-    margin-top: 40px;
-  }
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .nav {
-    margin: 0;
-  }
-  .offerList {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 380px 180px;
-    gap: 20px;
-  }
-  .offer--bigger,
-  .offer--lastMinute {
-    grid-column: 1/-1;
-  }
-  .benefits {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
-  }
-  .benefit {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  .benefit__title {
-    margin-top: 0;
-  }
-  .benefit__text {
-    padding-left: 20px;
-  }
-  /* -- OFFER DETAIL CSS -- */
-  .offer-titleImg {
-    min-height: 380px;
-  }
-  .detail_title {
-    font-size: 48px;
-  }
-  .detail_description {
-    font-size: 20px;
-  }
-  .detailInfoList {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: 1fr 1fr;
-  }
+  /* --- GALLERY --- */
   .gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -332,43 +386,74 @@ footer {
   }
 }
 @media screen and (min-width: 960px) {
-  .offerList {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 180px 180px;
-  }
-  .offer--bigger {
-    grid-column: 1/span 2;
-    grid-row: 1/span 2;
-  }
-  .offer--lastMinute {
-    grid-column: 2/span 2;
-    grid-row: 1/span 2;
-  }
-  .benefits {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-  }
-  .news {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
-  }
-  .news__title {
-    grid-column: span 3;
-  }
-  /* -- OFFER DETAIL CSS -- */
-  .main__detail {
+  .tripDetail {
     display: grid;
-    gap: 20px;
+    gap: 0 20px;
     grid-template-columns: 2fr 1fr;
   }
-  .offer-titleImg {
-    min-height: 462px;
-  }
-  .detailInfoList {
-    grid-column: 2;
-    grid-template-columns: 1fr;
-  }
+  /* --- GALLERY --- */
   .gallery {
     grid-column: 1;
+  }
+}
+@media screen and (min-width: 960px) {
+  .tripDetail {
+    display: grid;
+    gap: 0 20px;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+html {
+  box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+/* -- BASE -- */
+body {
+  margin: 36px 20px 40px;
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  color: #f03000;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 800;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+  color: #000000;
+  margin: 0;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+section {
+  margin-top: 40px;
+}
+
+.container {
+  max-width: 1200px;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    margin-top: 40px;
   }
 }/*# sourceMappingURL=style.css.map */
