--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,28 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@use 'color';
+@use 'font';
+@use 'header';
+@use 'footer';
+
+@use 'homepage/offers';
+@use 'homepage/benefits';
+@use 'homepage/news';
+
+@use 'trippage/tripDetail';
+
+//---------------------------
 
 html {
   box-sizing: border-box;
 }
+
 *,
 ::before,
 ::after {
   box-sizing: inherit;
 }
 
-$color-accent: #f03000;
-$color-white: #ffffff;
-$color-whiteGrey: #f0f0f0;
-$color-transparentGrey: #80808080;
-$color-grey: #888888;
-$color-darkGrey: #444444;
-$color-black: #000000;
-$color-grey--background: #e5e5e5;
-
-$font-montserrat: 'Montserrat', sans-serif;
-$font-openSans: 'Open Sans', sans-serif;
-
 /* -- BASE -- */
-
 body {
   margin: 36px 20px 40px;
   display: flex;
@@ -30,7 +29,7 @@ body {
 }
 
 h1 {
-  color: $color-accent;
+  color: color.$color-accent;
   text-align: center;
   font-size: 30px;
   font-weight: 800;
@@ -41,16 +40,16 @@ h1 {
 h1,
 h2,
 h3 {
-  font-family: $font-montserrat;
+  font-family: font.$font-montserrat;
 }
 
 h2 {
-  color: $color-black;
+  color: color.$color-black;
   margin: 0;
 }
 
 p {
-  font-family: $font-openSans;
+  font-family: font.$font-openSans;
 }
 
 section {
@@ -61,352 +60,8 @@ section {
   max-width: 1200px;
 }
 
-/* -- HEADER -- */
-.nav {
-  text-align: center;
-  margin: 30px 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__button {
-  color: $color-accent;
-  font-family: $font-montserrat;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 20px;
-  border: 0;
-  background-color: transparent;
-  text-decoration: none;
-}
-.nav__button:hover {
-  background-color: $color-accent;
-  color: $color-white;
-}
-
-/* -- OFFERS -- */
-.offerList {
-  display: grid;
-  grid-template-rows: 240px 150px 150px;
-  gap: 20px;
-}
-
-.offerList__title {
-  margin-bottom: 20px;
-}
-
-.offer,
-.offer__price,
-.offer__text {
-  position: relative;
-}
-.offer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  overflow: hidden;
-  text-decoration: none;
-}
-
-.offer__img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  transform: scale(1);
-  transition: transform 0.5s;
-}
-
-.offer__img:hover {
-  transform: scale(1.05);
-}
-
-.offer__price {
-  background-color: $color-accent;
-  padding: 10px;
-  font-family: $font-montserrat;
-  color: $color-white;
-  font-size: 18px;
-  margin: 20px;
-}
-
-.offer__text {
-  color: $color-white;
-  width: 100%;
-  padding: 20px;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0.5)
-  );
-}
-
-.offer__title {
-  margin: 0;
-}
-
-.offer__description {
-  font-family: $font-openSans;
-  margin: 18px 0 0;
-}
-
-.detailInfoList {
-  display: grid;
-  gap: 20px;
-}
-
-/* -- BENEFITS -- */
-.benefits {
-  display: grid;
-  gap: 10px;
-}
-
-.benefit {
-  background-color: $color-whiteGrey;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr;
-}
-
-.benefit__icon {
-  margin: 20px auto;
-}
-
-.benefit__title {
-  color: $color-accent;
-  font-size: 18px;
-}
-
-.benefit__text {
-  padding-right: 20px;
-}
-
-.benefit__description {
-  font-size: 16px;
-}
-
-/* -- NEWS -- */
-.news {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-}
-
-.new {
-  background-color: $color-whiteGrey;
-  font-family: $font-montserrat;
-  font-size: 16px;
-  padding-top: 20px;
-  font-weight: 600;
-}
-
-.new__date {
-  margin: 20px 20px 10px;
-}
-
-.new__title {
-  color: $color-accent;
-  margin: 10px 20px;
-}
-
-.new__text {
-  color: $color-black;
-  margin: 10px 20px 20px;
-}
-
-/* -- FOOTER -- */
-footer {
-  background-color: $color-darkGrey;
-  color: $color-white;
-  font-family: $font-montserrat;
-  font-size: 16px;
-  padding: 20px;
-  text-align: center;
-  margin-top: 40px;
-}
-
-.footer__text {
-  margin: 0;
-}
-
-/* -- OFFER DETAIL CSS -- */
-
-.offer-titleImg {
-  min-height: 240px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.detailInfo {
-  background-color: $color-grey--background;
-  padding: 20px;
-}
-
-.detailInfo__title {
-  color: $color-grey;
-  font-weight: 300;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding-bottom: 6px;
-  margin: 0;
-}
-
-.detailInfo__description {
-  font-size: 16px;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.detailInfo--important {
-  background-color: $color-accent;
-  color: $color-white;
-}
-
-.detailInfo--important .detailInfo__description {
-  font-size: 28px;
-  font-weight: 600;
-}
-
-.detailInfo--important .detailInfo__text {
-  opacity: 70%;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-}
-
-.gallery img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   body {
     margin-top: 40px;
-  }
-
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav {
-    margin: 0;
-  }
-
-  .offerList {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 380px 180px;
-    gap: 20px;
-  }
-
-  .offer--bigger,
-  .offer--lastMinute {
-    grid-column: 1 / -1;
-  }
-
-  .benefits {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
-  }
-
-  .benefit {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .benefit__title {
-    margin-top: 0;
-  }
-
-  .benefit__text {
-    padding-left: 20px;
-  }
-
-  /* -- OFFER DETAIL CSS -- */
-  .offer-titleImg {
-    min-height: 380px;
-  }
-
-  .detail_title {
-    font-size: 48px;
-  }
-
-  .detail_description {
-    font-size: 20px;
-  }
-
-  .detailInfoList {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .gallery {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 20px;
-  }
-}
-
-@media screen and (min-width: 960px) {
-  .offerList {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 180px 180px;
-  }
-
-  .offer--bigger {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
-  }
-
-  .offer--lastMinute {
-    grid-column: 2 / span 2;
-    grid-row: 1 / span 2;
-  }
-
-  .benefits {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-  }
-
-  .news {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
-  }
-
-  .news__title {
-    grid-column: span 3;
-  }
-
-  /* -- OFFER DETAIL CSS -- */
-  .main__detail {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: 2fr 1fr;
-  }
-
-  .offer-titleImg {
-    min-height: 462px;
-  }
-
-  .detailInfoList {
-    grid-column: 2;
-    grid-template-columns: 1fr;
-  }
-
-  .gallery {
-    grid-column: 1;
   }
 }
